--- a/magento-preview-cae/pom.xml
+++ b/magento-preview-cae/pom.xml
@@ -7,11 +7,11 @@
   <parent>
     <groupId>com.coremedia.blueprint</groupId>
     <artifactId>magento</artifactId>
-    <version>17-BP-SNAPSHOT</version>
+    <version>1-SNAPSHOT</version>
   </parent>
 
   <artifactId>magento-preview-cae</artifactId>
-  <name>LiveContext for Magento CAE</name>
+  <name>LiveContext for Magento Preview CAE</name>
 
   <properties>
     <coremedia.project.extension.for>preview-cae</coremedia.project.extension.for>
@@ -40,18 +40,20 @@
     </dependency>
 
     <dependency>
-      <groupId>com.coremedia.cms</groupId>
-      <artifactId>cap-unified-api</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>lc-contentbeans-impl</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.coremedia.blueprint</groupId>
+      <artifactId>contentbeans</artifactId>
       <version>${project.version}</version>
     </dependency>
 
@@ -66,18 +68,13 @@
     </dependency>
 
     <dependency>
+      <groupId>com.coremedia.blueprint.base</groupId>
+      <artifactId>bpbase-lc-common</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
     </dependency>
 
     <dependency>
@@ -100,16 +97,6 @@
     <dependency>
       <groupId>org.apache.solr</groupId>
       <artifactId>solr-solrj</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
     </dependency>
 
   </dependencies>
