--- a/test-data/pom.xml
+++ b/test-data/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.coremedia.blueprint</groupId>
     <artifactId>magento</artifactId>
-    <version>17-BP-SNAPSHOT</version>
+    <version>1-SNAPSHOT</version>
   </parent>
 
   <artifactId>magento-test-data</artifactId>
