--- a/lc-ecommerce-magento-lib/src/main/resources/framework/spring/lc-ecommerce-magento.properties
+++ b/lc-ecommerce-magento-lib/src/main/resources/framework/spring/lc-ecommerce-magento.properties
@@ -13,7 +13,7 @@ livecontext.magento.host=10.2.2.64
 livecontext.magento.apiVersion=V1
 livecontext.magento.basePath=/rest
 livecontext.magento.user=coremedia
-livecontext.magento.password=CoreMedia@2017
+livecontext.magento.password=
 
 # The default locale for the commerce system. This may be used as fallback if certain information are
 # not set on localized commerce objects. If, for example, the german seo segment for a product is not
